新增rocksdbffm模块，提供rocksdb访问能力